refactor: code format